packages/tree-sitter-rgbds/test/corpus/directives.txt
================================================================================
Section directive
================================================================================

SECTION "Main", ROM0[$0100]

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (directive
        (section_directive
          (string)
          (section_type)
          (expression
            (number)))))))

================================================================================
Data bytes
================================================================================

    db $01, $02, $03

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (directive
        (data_directive
          (expression_list
            (expression
              (number))
            (expression
              (number))
            (expression
              (number))))))))

================================================================================
EQU constant with DEF
================================================================================

DEF PLAYER_HP EQU $C100

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (directive
        (constant_directive
          (identifier)
          (expression
            (number)))))))

================================================================================
Legacy EQU constant
================================================================================

MAX_HEALTH EQU 100

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (directive
        (constant_directive
          (identifier)
          (expression
            (number)))))))

================================================================================
Include directive
================================================================================

INCLUDE "ram/wram.asm"

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (directive
        (include_directive
          (string))))))

================================================================================
Comment line
================================================================================

; This is a comment

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (comment)))

================================================================================
Inline comment
================================================================================

    ld a, 1 ; load accumulator

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (instruction
        (mnemonic)
        (operand_list
          (operand
            (register))
          (operand
            (expression
              (number))))))
    (comment)))

================================================================================
Macro boundary markers
================================================================================

MACRO WaitVBlank
    halt
ENDM

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (directive
        (macro_start
          (identifier)))))
  (line
    (statement
      (instruction
        (mnemonic))))
  (line
    (statement
      (directive
        (endm_directive)))))

================================================================================
Conditional boundary markers
================================================================================

IF DEF(MY_FLAG)
    nop
ENDC

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (directive
        (if_directive
          (expression
            (function_call
              (builtin_function)
              (expression_list
                (expression
                  (symbol_reference
                    (identifier))))))))))
  (line
    (statement
      (instruction
        (mnemonic))))
  (line
    (statement
      (directive
        (endc_directive)))))
