packages/tree-sitter-rgbds/test/corpus/instructions.txt
================================================================================
Simple instruction
================================================================================

    nop

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (instruction
        (mnemonic)))))

================================================================================
Load instruction
================================================================================

    ld a, b

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (instruction
        (mnemonic)
        (operand_list
          (operand
            (register))
          (operand
            (register)))))))

================================================================================
Memory operand
================================================================================

    ld a, [hl]

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (instruction
        (mnemonic)
        (operand_list
          (operand
            (register))
          (operand
            (memory_operand
              (register))))))))

================================================================================
Immediate value
================================================================================

    ld a, $FF

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (instruction
        (mnemonic)
        (operand_list
          (operand
            (register))
          (operand
            (expression
              (number))))))))

================================================================================
Call with label
================================================================================

    call MainLoop

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (instruction
        (mnemonic)
        (operand_list
          (operand
            (expression
              (symbol_reference
                (identifier)))))))))

================================================================================
Conditional jump
================================================================================

    jp nz, .loop

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (statement
      (instruction
        (mnemonic)
        (operand_list
          (operand
            (condition))
          (operand
            (expression
              (symbol_reference
                (local_identifier)))))))))
