packages/tree-sitter-rgbds/test/corpus/labels.txt
================================================================================
Global label
================================================================================

MainLoop:
    nop

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (label_definition
      (global_label
        (identifier))))
  (line
    (statement
      (instruction
        (mnemonic)))))

================================================================================
Exported global label
================================================================================

ExportedSymbol::
    ret

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (label_definition
      (global_label
        (identifier))))
  (line
    (statement
      (instruction
        (mnemonic)))))

================================================================================
Local label with colon
================================================================================

.loop:
    jr nz, .loop

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (label_definition
      (local_label
        (local_identifier))))
  (line
    (statement
      (instruction
        (mnemonic)
        (operand_list
          (operand
            (condition))
          (operand
            (expression
              (symbol_reference
                (local_identifier)))))))))

================================================================================
Local label without colon
================================================================================

.done
    ret

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (label_definition
      (local_label
        (local_identifier))))
  (line
    (statement
      (instruction
        (mnemonic)))))

================================================================================
Label with instruction on same line
================================================================================

WaitVBlank: halt
    nop

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (label_definition
      (global_label
        (identifier)))
    (statement
      (instruction
        (mnemonic))))
  (line
    (statement
      (instruction
        (mnemonic)))))
