packages/tree-sitter-rgbds/test/corpus/special_operands.txt
================================================================================
SP plus offset
================================================================================

    ld hl, sp+$00

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (instruction
      (mnemonic)
      (operand_list
        (operand
          (register))
        (operand
          (sp_offset
            (register)
            (expression
              (number))))))))

================================================================================
SP minus offset
================================================================================

    ld hl, sp-$02

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (instruction
      (mnemonic)
      (operand_list
        (operand
          (register))
        (operand
          (sp_offset
            (register)
            (expression
              (number))))))))

================================================================================
HL increment memory
================================================================================

    ld a, [hl+]

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (instruction
      (mnemonic)
      (operand_list
        (operand
          (register))
        (operand
          (memory_operand
            (register)))))))

================================================================================
HL decrement memory
================================================================================

    ld [hl-], a

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (instruction
      (mnemonic)
      (operand_list
        (operand
          (memory_operand
            (register)))
        (operand
          (register))))))

================================================================================
Absolute memory address
================================================================================

    ld a, [$FF44]

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (instruction
      (mnemonic)
      (operand_list
        (operand
          (register))
        (operand
          (memory_operand
            (expression
              (number))))))))

================================================================================
Named memory address
================================================================================

    ld a, [wPlayerHP]

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (instruction
      (mnemonic)
      (operand_list
        (operand
          (register))
        (operand
          (memory_operand
            (expression
              (symbol_reference
                (identifier)))))))))

================================================================================
RST instruction
================================================================================

    rst $28

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (instruction
      (mnemonic)
      (operand_list
        (operand
          (expression
            (number)))))))

================================================================================
Bit operation
================================================================================

    bit 7, a

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (instruction
      (mnemonic)
      (operand_list
        (operand
          (expression
            (number)))
        (operand
          (register))))))

================================================================================
SP as standalone register operand
================================================================================

    inc sp

--------------------------------------------------------------------------------

(source_file
  (line)
  (line
    (instruction
      (mnemonic)
      (operand_list
        (operand
          (register))))))
